--- a/ComparaYa/Favs.xaml
+++ b/ComparaYa/Favs.xaml
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<xct:Popup
-    x:Class="ComparaYa.ModalFavorites"
+<ContentPage
+    x:Class="ComparaYa.Favs"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:ComparaYa"
-    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-    Size="350,500">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <StackLayout>
         <Label
             Margin="4"
@@ -25,7 +22,6 @@
                     Span="2"
                     VerticalItemSpacing="20" />
             </CollectionView.ItemsLayout>
-            
             <CollectionView.Footer>
                 <ActivityIndicator
                     x:Name="loadMoreActivityIndicator"
@@ -34,6 +30,9 @@
                     VerticalOptions="Center"
                     Color="Blue" />
             </CollectionView.Footer>
+            <CollectionView.Header>
+                <Button Clicked="Button_Clicked" Text="borrar" />
+            </CollectionView.Header>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand">
@@ -130,4 +129,4 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
     </StackLayout>
-</xct:Popup>
+</ContentPage>
