--- a/ComparaYa/PlaneadorCompra.xaml
+++ b/ComparaYa/PlaneadorCompra.xaml
@@ -11,23 +11,31 @@
     </ContentPage.IconImageSource>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height=" 40" />
+            <RowDefinition Height=" 60" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackLayout
-            Grid.Row="0"
-            Margin="10"
-            VerticalOptions="CenterAndExpand">
+        <FlexLayout AlignContent="Center" AlignItems="Center">
+
+            <lottie:AnimationView
+                x:Name="backcart"
+                Margin="10"
+                Animation="back.json"
+                AutoPlay="True"
+                Clicked="backcart_Clicked"
+                HeightRequest="80"
+                IsVisible="false"
+                VerticalOptions="StartAndExpand"
+                WidthRequest="40" />
             <Label
                 x:Name="carText"
+                Margin="90,0,0,0"
                 FontFamily="PPI"
                 FontSize="20"
-                HorizontalTextAlignment="Center"
-                TextColor="Black"
-                VerticalTextAlignment="Center" />
-        </StackLayout>
+                TextColor="Black" />
+
+        </FlexLayout>
         <CollectionView
             Grid.Row="1"
             Margin="15,0,15,15"
